--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <base href="%VITE_BASE_URL%" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Yonca İşyar - Grafik Tasarımcı Portfolyo" />
     <meta name="keywords" content="grafik tasarım, portfolyo, Yonca İşyar, tasarımcı" />
