--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <base href="%VITE_BASE_URL%" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Yonca İşyar - Grafik Tasarımcı Portfolyo" />
     <meta name="keywords" content="grafik tasarım, portfolyo, Yonca İşyar, tasarımcı" />
     <meta name="author" content="Yonca İşyar" />
     
-    <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Yonca İşyar - Grafik Tasarımcı" />
     <meta property="og:description" content="Yaratıcı grafik tasarım çözümleri" />
