--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta property="og:description" content="Yaratıcı grafik tasarım çözümleri" />
     
     <title>Yonca İşyar | Grafik Tasarımcı</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
