--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="description" content="Yonca İşyar - Grafik Tasarımcı Portfolyo" />
     <meta name="keywords" content="grafik tasarım, portfolyo, Yonca İşyar, tasarımcı" />
     <meta name="author" content="Yonca İşyar" />
